--- a/Valtrook/Valtrook/Valtrook.vcxproj.filters
+++ b/Valtrook/Valtrook/Valtrook.vcxproj.filters
@@ -118,6 +118,12 @@
     <Filter Include="Header Files\Engine\Renderables\Particle\Func">
       <UniqueIdentifier>{c731f312-ad07-4cc0-a973-e5dc05ca223c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Engine\Renderables\Particle">
+      <UniqueIdentifier>{6087277b-a082-4c57-a6e5-b05def839d67}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Engine\Renderables\Particle\Functions">
+      <UniqueIdentifier>{9f8cff9b-385d-4e00-bd88-83654f3c4026}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -300,16 +306,19 @@
     <ClCompile Include="GameObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParticleSystem.cpp">
+      <Filter>Source Files\Engine\Renderables\Particle</Filter>
+    </ClCompile>
     <ClCompile Include="Particle.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Engine\Renderables\Particle</Filter>
     </ClCompile>
     <ClCompile Include="ParticleEmitter.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ParticleSystem.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Engine\Renderables\Particle</Filter>
     </ClCompile>
     <ClCompile Include="ParticleFunctions.cpp">
+      <Filter>Source Files\Engine\Renderables\Particle\Functions</Filter>
+    </ClCompile>
+    <ClCompile Include="OptionScreenState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -605,16 +614,19 @@
     <ClInclude Include="ParticleFunctions.h">
       <Filter>Header Files\Engine\Renderables\Particle\Func</Filter>
     </ClInclude>
-    <ClInclude Include="Particle.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ParticleAttribute.h">
       <Filter>Header Files\Engine\Renderables\Particle</Filter>
     </ClInclude>
-    <ClInclude Include="ParticleEmitter.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ParticleSystem.h">
+      <Filter>Header Files\Engine\Renderables\Particle</Filter>
+    </ClInclude>
+    <ClInclude Include="Particle.h">
+      <Filter>Header Files\Engine\Renderables\Particle</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticleEmitter.h">
+      <Filter>Header Files\Engine\Renderables\Particle</Filter>
+    </ClInclude>
+    <ClInclude Include="OptionScreenState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
