--- a/Valtrook/Valtrook/Valtrook.vcxproj
+++ b/Valtrook/Valtrook/Valtrook.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="SimplexNoise.cpp" />
     <ClCompile Include="SplashState.cpp" />
     <ClCompile Include="TaskMaster.cpp" />
+    <ClCompile Include="TDState.cpp" />
     <ClCompile Include="TextRectangle.cpp" />
     <ClCompile Include="TextRenderer.cpp" />
     <ClCompile Include="TextResource.cpp" />
@@ -282,6 +283,7 @@
     <ClInclude Include="StaticValue.h" />
     <ClInclude Include="StopWatch.h" />
     <ClInclude Include="TaskMaster.h" />
+    <ClInclude Include="TDState.h" />
     <ClInclude Include="TextRectangle.h" />
     <ClInclude Include="TextRenderer.h" />
     <ClInclude Include="TextResource.h" />
